refactor(api): ♻️ 优化代码逻辑与结构调整
简化 ClusterRoleUserServiceImpl 中的返回逻辑，直接返回表达式结果
优化 ClusterInfoServiceImpl 中的列表获取方式，使用 getFirst() 替代 get(0)
移除 UserInfoController 中不必要的用户ID过滤条件
在集群创建时添加集群管理员ID的保存逻辑

清理无用导入并调整代码格式，提高代码可读性和维护性